# Ghost

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  ghost.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
ghost/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  logger.py  models.py  output.py
ghost/data/: __init__.py
ghost/modules/: __init__.py  amsi.py  av_evasion.py  base.py  edr.py  injection.py  lolbas.py  shellcode.py
ghost/utils/: __init__.py  artifacts.py  crypto.py
tests/: test_boundary_crypto.py  test_boundary_models.py  test_boundary_modules.py  test_boundary_output.py  test_cli.py  test_crypto.py  test_models.py
